[package]
name = "gdtosignalrs"
version = "0.1.0"
edition = "2021"
authors = ["QIZI94"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7", features = ["env", "derive"]}
scan_dir = "0.3.3"
syn = {version = "2.0.38",features = ["full"]}
